@@ -3,6 +3,8 @@ samba (2:3.5.11~dfsg-2) UNRELEASED; urgency=low
   * Don't export DEB_HOST_ARCH_OS in debian/rules, this is only used locally.
   * Use dh_links instead of manually creating directories and symlinks from
     debian/rules.
+  * Switch from dh_movefiles to dh_install and adjust for debhelper compat
+    level 7, in preparation for moving to dh(1).
 
  -- Steve Langasek <vorlon@debian.org>  Sat, 24 Sep 2011 13:36:50 -0700
 
